Bug 132334 - Random mode isn't really random
Summary: Random mode isn't really random
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 277338 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-08-13 10:05 UTC by Marten Seemann
Modified: 2013-04-16 16:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marten Seemann 2006-08-13 10:05:16 UTC
Version:           1.3.1 (using KDE KDE 3.5.4)
Installed from:    Ubuntu Packages
OS:                Linux

The random mode in Gwenview is a really nice feature. Unfortunately, it isn't really random:
* having viewed all pictures in random mode it starts at the beginning - but the pictures appear in the same order
* also after restarting the slideshow the order of the pictures hasn't yet changed.

I think that the random mode should be change the pictures really by random, so that the order is always different.
Comment 1 Andrew M 2010-01-11 15:46:54 UTC
I can confirm that this really old bug is still valid on the current Gwenview 2.3.4 (KDE 4.3.4).

To reproduce: Open a picture in a folder full of well known pictures and activate full screen with random image selected for the slideshow. Running the slide show note the order of the pictures. Close Gwenview and start it up again at the same folder and run the slideshow again.

You should notice that the images will appear in the same order. Almost as if Gwenview created a random "playlist" and has stuck to it.

I think the best random mode implementation for a slideshow should appear random but not too random as to show the same picture in close proximity (very bad for a public display). Probably weighted to choose one that hasn't been displayed in a while over a recent one, but still have randomness.
Comment 2 Aurelien Gateau 2011-05-27 18:14:05 UTC
Git commit 5a942e4688702d13380d3ced1e54ffb7eb58a5a9 by Aurélien Gâteau.
Committed on 27/05/2011 at 18:13.
Pushed by gateau into branch 'master'.

Improve randomized slideshow

- Make sure order is not the same between 2 runs of Gwenview
- When looping, make sure the new list does not start with the last
  displayed image

BUG:132334

M  +30   -1    lib/slideshow.cpp     

http://commits.kde.org/gwenview/5a942e4688702d13380d3ced1e54ffb7eb58a5a9
Comment 3 Benni Hill 2013-04-16 16:44:54 UTC
*** Bug 277338 has been marked as a duplicate of this bug. ***