Improve randomized slideshow

- Make sure order is not the same between 2 runs of Gwenview
- When looping, make sure the new list does not start with the last
  displayed image

BUG:132334